--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
+          args: deploy --only hosting --token '${{ secrets.FIREBASE_GITHUB_TOKEN }}'
         env:
           FIREBASE_TOKEN: '${{ secrets.FIREBASE_GITHUB_TOKEN }}'
