--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Build & Deploy
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -15,11 +15,26 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      # - name: Run Tests
-      #   run: npm run test
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: dist
+          path: dist
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: dist
+          path: dist
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting --token '${{ secrets.FIREBASE_GITHUB_TOKEN }}'
+          args: deploy --only hosting:staging
         env:
-          FIREBASE_TOKEN: '${{ secrets.FIREBASE_GITHUB_TOKEN }}'
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_GITHUB_TOKEN }}
