--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,6 +1,3 @@
-stages:
-    - build
-
 cache:
     paths:
         - node_modules/
@@ -12,7 +9,7 @@ on:
       - master
 
 jobs:
-  stage: build
+  build:
     name: Build & Deploy
     runs-on: ubuntu-latest
     steps:
